fixes info-bar wrap on small screen

--- a/styles/components/blog/_info-bar.scss
+++ b/styles/components/blog/_info-bar.scss
@@ -1,14 +1,19 @@
 .blog-info-bar {
+  display: flex;
+  flex-wrap: wrap;
+
   span {
     margin-top: 0;
     color: $color-dark-gray;
 
     &:nth-child(1) {
       margin-right: $space-md;
+      margin-bottom: $space-sm;
       text-transform: uppercase;
     }
 
     &:nth-child(2) {
+      display: inline-table;
       padding: 0 $space-xs $space-xxs $space-xs;
       border: black 1px solid;
       border-radius: $border-radius-md;
